[package]
name = "bevy_tanks"
version = "0.1.0"
edition = "2021"
author = "BOB450"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = {version = "0.11", features = ["dynamic_linking"]}
bevy_editor_pls = {git = "https://github.com/jakobhellermann/bevy_editor_pls.git", branch = "main"} 
bevy_rapier2d = { version = "0.22.0", features = "par"}
bevy_svg = { version = "0.11.0", default-features = false, features = ["2d"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
